# metaflow-modal

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml
docs/: architecture.md
src/metaflow_extensions/modal/plugins/: __init__.py  modal_cli.py  modal_decorator.py  modal_executor.py
tests/integration/: test_modal_e2e.py
tests/structural/: test_architecture.py
tests/unit/: test_modal_executor.py
